@@ -6,6 +6,8 @@ debhelper (10.10.8) UNRELEASED; urgency=medium
     due to profiles or architecture restrictions.
   * dh_install: Properly allow patterns to be excluded without
     complaining about missing files.  (Closes: #881658)
+  * qmake.pm: Ensure that the qmake cross-build config file
+    survives until clean.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Set QMAKE_LINK correctly for cross-builds.
